Use embedding for wrapping loop
It simplifies things a bit...
