# doc/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.0",
+    "version": "2017.08.06",
     "title": "Davis Instruments weather station server",
     "description": "This uses the weatherlink package to talk to a Davis weather station over a Weatherlink IP, serial, or USB interface.",
     "license": {
@@ -101,7 +101,7 @@
           "200": {
             "description": "List of loop packets",
             "schema": {
-              "$ref": "#/definitions/WrappedLoops"
+              "$ref": "#/definitions/Loops"
             }
           },
           "503": {
@@ -254,6 +254,14 @@
       "description": "Loop is a combined struct representation of the union of loop1 and loop2 packets.  They have a lot of overlap but the precision is sometimes different and they complement each other.",
       "type": "object",
       "properties": {
+        "sequence": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "timestamp": {
+          "type": "string",
+          "format": "date-time"
+        },
         "ET": {
           "$ref": "#/definitions/LoopET"
         },
@@ -531,37 +539,11 @@
         }
       }
     },
-    "WrappedLoops": {
-      "title": "WrappedLoops",
+    "Loops": {
+      "title": "Loops",
       "type": "array",
       "items": {
-        "$ref": "#/definitions/WrappedLoop"
-      }
-    },
-    "WrappedLoop": {
-      "description": "WrappedLoop is a wrapper struct for a Loop packet so Update information can be added.",
-      "type": "object",
-      "properties": {
-        "loop": {
-          "$ref": "#/definitions/Loop"
-        },
-        "update": {
-          "$ref": "#/definitions/Update"
-        }
-      }
-    },
-    "Update": {
-      "description": "Update is a struct for representing the update timestamp and sequence of a loop sample.",
-      "type": "object",
-      "properties": {
-        "sequence": {
-          "type": "integer",
-          "format": "int64"
-        },
-        "timestamp": {
-          "type": "string",
-          "format": "date-time"
-        }
+        "$ref": "#/definitions/Loop"
       }
     }
   }
